style footer not ready

--- a/website/index.html
+++ b/website/index.html
@@ -82,16 +82,18 @@
             </section>
             <section id="contact">
                 <h2>Drop Us a Line</h2>
-                <ul id="contact-methods">
-                    <li>5353670339</li>
-                    <li>oli.blablabla.com</li>
-                    <li>
-                        <span>Leaf Studio</span>
-                        <span>Time square</span>
-                        <span>NY</span>
-                    </li>
-                </ul>
-                <img src="images/map.png" alt="map">
+                <div class="contact">
+                    <ul id="contact-methods">
+                        <li>5353670339</li>
+                        <li>oli.blablabla.com</li>
+                        <li>
+                            <span>Leaf Studio</span>
+                            <span>Time square</span>
+                            <span>NY</span>
+                        </li>
+                    </ul>
+                    <img src="images/map.png" alt="map">
+                </div>
                 <ul id="social-map">
                     <li class="facebook"><a href="">Facebook</a></li>
                     <li class="twitter"><a href="">Twitter</a></li>
