--- a/website/index.html
+++ b/website/index.html
@@ -94,7 +94,7 @@
                     </ul>
                     <img src="images/map.png" alt="map">
                 </div>
-                <ul id="social-map">
+                <ul id="social-nav">
                     <li class="facebook"><a href="">Facebook</a></li>
                     <li class="twitter"><a href="">Twitter</a></li>
                     <li class="pinterest"><a href="">Pinterest</a></li>
